# pdns

./: configure.ac  meson.build  tasks.py
.github/workflows/: build-and-test-all.yml  builder-dispatch.yml  builder.yml  codeql-analysis.yml  docker.yml  documentation.yml  formatting.yml  misc-dailies.yml  secpoll.yml  spelling2.yml
builder-support/dockerfiles/: Dockerfile.rpmbuild
builder-support/helpers/: install_rust.sh
builder-support/specs/: pdns-recursor.spec  pdns.spec
contrib/: ProtobufLogger.py
docs/: secpoll.zone
pdns/: Makefile.am  auth-primarycommunicator.cc  bindparserclasses.hh  credentials.cc  dnssecmeasure.cc  dolog.hh  gss_context.cc  iputils.cc  logger.cc  logger.hh  lua-base4.cc  misc.cc  pdns_recursor.cc  protozero-trace.hh  query-local-address.cc  query-local-address.hh  rec-snmp.cc  rec_channel_rec.cc  remote_logger.cc  shuffle.cc  syncres.cc  syncres.hh  tcpiohandler.cc  tcpiohandler.hh  unix_utility.cc  utility.hh  webserver.cc  webserver.hh  ws-recursor.cc
pdns/dnsdistdist/: configure.ac  dnsdist-configuration-yaml.cc
pdns/recursordist/: Makefile.am  RECURSOR-MIB.txt  aggressive_nsec.cc  configure.ac  lua-recursor4.cc  lwres.cc  lwres.hh  meson.build  negcache.hh  nod.cc  pdns_recursor.cc  protozero-trace.hh  ratelimitedlog.hh  (+41 more)
pdns/recursordist/rust/experiment/: .gitignore  Cargo.toml  Makefile.am  build.rs
pdns/recursordist/rust/experiment/include/: blobstore.h
pdns/recursordist/rust/experiment/src/: blobstore.cc  lib.rs
regression-tests.recursor-dnssec/: recursortests.py  test_EDNSBufferSize.py  test_NTA.py  test_RPZ.py
(+23 files in other folders)
